--- a/@core/scss/template/libs/vuetify/_variables.scss
+++ b/@core/scss/template/libs/vuetify/_variables.scss
@@ -205,7 +205,7 @@ $font-family-custom: "Inter", sans-serif, -apple-system, blinkmacsystemfont, "Se
   
   // 👉 Chip
   $chip-font-size: 13px !default,
-  // $chip-icon-font-size: 1.25rem !default,
+ $chip-icon-font-size: 1.25rem !default,
   $chip-close-size: 20px !default,
   $chip-font-weight: 500 !default,
 
